[gd_scene load_steps=4 format=3 uid="uid://drbypv8b3pnir"]

[ext_resource type="Script" path="res://scenes/card/shop_card.gd" id="1_2eux1"]
[ext_resource type="Texture2D" uid="uid://dhmtctwb5ymhc" path="res://place_holder_art/gold.png" id="2_luda4"]
[ext_resource type="PackedScene" uid="uid://4hofjhklp6mv" path="res://scenes/ui/card_menu_ui.tscn" id="2_udy62"]

[node name="ShopCard" type="VBoxContainer"]
custom_minimum_size = Vector2(100, 176)
offset_right = 40.0
offset_bottom = 40.0
theme_override_constants/separation = 5
alignment = 1
script = ExtResource("1_2eux1")

[node name="CardContainer" type="CenterContainer" parent="."]
unique_name_in_owner = true
layout_mode = 2
mouse_filter = 0

[node name="CardMenuUI" parent="CardContainer" instance=ExtResource("2_udy62")]
layout_mode = 2

[node name="BuyButton" type="Button" parent="."]
unique_name_in_owner = true
layout_mode = 2
text = "999"
icon = ExtResource("2_luda4")
expand_icon = true

[connection signal="gui_input" from="CardContainer" to="." method="_on_card_container_gui_input"]
[connection signal="mouse_entered" from="CardContainer" to="." method="_on_card_container_mouse_entered"]
[connection signal="mouse_exited" from="CardContainer" to="." method="_on_card_container_mouse_exited"]
[connection signal="pressed" from="BuyButton" to="." method="_on_buy_button_pressed"]
